--- a/index.html
+++ b/index.html
@@ -9,77 +9,78 @@
 </head>
 <body>
   <div class='container'>
-    <about>
+    <div class='about'>
       <h1>Scott Gall</h1>
       <img src='https://drive.google.com/uc?export=view&id=1RGqi7KVCu630eERbNQFbVj8mSFnxVNcO'/>
       <h2>front-end developer</h2>
       <h2>I create polished interfaces and powerful tools that make for smooth, accessable user experiences.</h2>
-    </about>
-
-    <div>
-      <h3>LookingBack</h3>
-      <p>MERN stack social media app to memorialize lost loved ones</p>
-      <a href="https://looking-back.herokuapp.com/">Link</a>
-      <a href="https://github.com/scottgall/Looking-Back/">GitHub</a>
-      <a href="url">Demo</a>
     </div>
 
-    <div>
-      <h3>JobSpace</h3>
-      <p>MySQL job application tracker</p>
-      <a href="https://thejobspace.herokuapp.com/">Link</a>
-      <a href="https://github.com/scottgall/Job-Space/">GitHub</a>
-      <a href="url">Demo</a>
-    </div>
+    <div class='work'>
+      <div>
+        <h3>LookingBack</h3>
+        <p>MERN stack social media app to memorialize lost loved ones</p>
+        <a href="https://looking-back.herokuapp.com/">Link</a>
+        <a href="https://github.com/scottgall/Looking-Back/">GitHub</a>
+        <a href="url">Demo</a>
+      </div>
 
-    <div>
-      <h3>Fridge Forager</h3>
-      <p>Yummly API recipe search engine</p>
-      <a href="https://scottgall.github.io/Fridge-Forager/">Link</a>
-      <a href="https://github.com/scottgall/Fridge-Forager/">GitHub</a>
-      <a href="url">Demo</a>
-    </div>
+      <div>
+        <h3>JobSpace</h3>
+        <p>MySQL job application tracker</p>
+        <a href="https://thejobspace.herokuapp.com/">Link</a>
+        <a href="https://github.com/scottgall/Job-Space/">GitHub</a>
+        <a href="url">Demo</a>
+      </div>
 
-    <div>
-      <h3>News Scraper</h3>
-      <p>MongoDB web scraper</p>
-      <a href="https://mongolianmongoscraper.herokuapp.com/">Link</a>
-      <a href="https://github.com/scottgall/Mongolian-News-Scraper/">GitHub</a>
-      <a href="url">Demo</a>
-    </div>
+      <div>
+        <h3>Fridge Forager</h3>
+        <p>Yummly API recipe search engine</p>
+        <a href="https://scottgall.github.io/Fridge-Forager/">Link</a>
+        <a href="https://github.com/scottgall/Fridge-Forager/">GitHub</a>
+        <a href="url">Demo</a>
+      </div>
 
-    <div>
-      <h3>Skateboard Trivia</h3>
-      <p>Timed multiple-choice trivia quiz</p>
-      <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/">Link</a>
-      <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/">GitHub</a>
-      <a href="url">Demo</a>
-    </div>
+      <div>
+        <h3>News Scraper</h3>
+        <p>MongoDB web scraper</p>
+        <a href="https://mongolianmongoscraper.herokuapp.com/">Link</a>
+        <a href="https://github.com/scottgall/Mongolian-News-Scraper/">GitHub</a>
+        <a href="url">Demo</a>
+      </div>
 
-    <div>
-      <h3>Guess The Trick</h3>
-      <p>Skateboarding themed hangman game</p>
-      <a href="https://scottgall.github.io/Guess-The-Trick/">Link</a>
-      <a href="https://github.com/scottgall/Guess-The-Trick/">GitHub</a>
-      <a href="url">Demo</a>
-    </div>
+      <div>
+        <h3>Skateboard Trivia</h3>
+        <p>Timed multiple-choice trivia quiz</p>
+        <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/">Link</a>
+        <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/">GitHub</a>
+        <a href="url">Demo</a>
+      </div>
 
-    <div>
-      <h3>Star Wars RPG</h3>
-      <p>Single-player Javascirpt RPG</p>
-      <a href="https://looking-back.herokuapp.com/">Link</a>
-      <a href="url">GitHub</a>
-      <a href="url">Demo</a>
-    </div>
+      <div>
+        <h3>Guess The Trick</h3>
+        <p>Skateboarding themed hangman game</p>
+        <a href="https://scottgall.github.io/Guess-The-Trick/">Link</a>
+        <a href="https://github.com/scottgall/Guess-The-Trick/">GitHub</a>
+        <a href="url">Demo</a>
+      </div>
 
-    <div>
-      <h3>Node CLI Store</h3>
-      <p>MySQL job application tracker</p>
-      <a href="https://looking-back.herokuapp.com/">Link</a>
-      <a href="url">GitHub</a>
-      <a href="url">Demo</a>
-    </div>
+      <div>
+        <h3>Star Wars RPG</h3>
+        <p>Single-player Javascirpt RPG</p>
+        <a href="https://looking-back.herokuapp.com/">Link</a>
+        <a href="url">GitHub</a>
+        <a href="url">Demo</a>
+      </div>
 
+      <div>
+        <h3>Node CLI Store</h3>
+        <p>MySQL job application tracker</p>
+        <a href="https://looking-back.herokuapp.com/">Link</a>
+        <a href="url">GitHub</a>
+        <a href="url">Demo</a>
+      </div>
+    </div>
   </div>  
 </body>
 </html>
