--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class='about'>
       <h1>Scott Gall</h1>
       <img src='https://drive.google.com/uc?export=view&id=1FrhMYIAIoQ0Rxc0IJvGspVU4qJjenOFr'/>
-      <h2>front-end developer</h2>
+      <h2>web developer</h2>
       <h2>I create polished interfaces and powerful tools that make for smooth, accessable user experiences.</h2>
     </div>
 
