--- a/index.html
+++ b/index.html
@@ -9,63 +9,72 @@
 </head>
 <body>
   <div class='container'>
-    <div class='about'>
-      <h1>Scott Gall</h1>
-      <img src='https://drive.google.com/uc?export=view&id=1FrhMYIAIoQ0Rxc0IJvGspVU4qJjenOFr'/>
-      <h2>web developer</h2>
-      <h2>I create polished interfaces and powerful tools that make for smooth, accessable user experiences.</h2>
+    <div class='top-bar'>
+      top bar
+    </div>
+    <div class='main-content'>
+      <div class='about'>
+        <h1>Scott Gall</h1>
+        <img src='https://drive.google.com/uc?export=view&id=1FrhMYIAIoQ0Rxc0IJvGspVU4qJjenOFr'/>
+        <h2>web developer</h2>
+        <h2>I create polished interfaces and powerful tools that make for smooth, accessable user experiences.</h2>
+      </div>
+
+      <div class='work'>
+        <div>
+          <h3>LookingBack</h3>
+          <p>MERN stack social media app to memorialize lost loved ones</p>
+          <a href="https://looking-back.herokuapp.com/">Link</a>
+          <a href="https://github.com/scottgall/Looking-Back/">GitHub</a>
+        </div>
+
+        <div>
+          <h3>JobSpace</h3>
+          <p>MySQL job application tracker</p>
+          <a href="https://thejobspace.herokuapp.com/">Link</a>
+          <a href="https://github.com/scottgall/Job-Space/">GitHub</a>
+        </div>
+
+        <div>
+          <h3>Fridge Forager</h3>
+          <p>Yummly API recipe search engine</p>
+          <a href="https://scottgall.github.io/Fridge-Forager/">Link</a>
+          <a href="https://github.com/scottgall/Fridge-Forager/">GitHub</a>
+        </div>
+
+        <div>
+          <h3>News Scraper</h3>
+          <p>MongoDB web scraper</p>
+          <a href="https://mongolianmongoscraper.herokuapp.com/">Link</a>
+          <a href="https://github.com/scottgall/Mongolian-News-Scraper/">GitHub</a>
+        </div>
+
+        <div>
+          <h3>Skateboard Trivia</h3>
+          <p>Timed multiple-choice trivia quiz</p>
+          <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/">Link</a>
+          <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/">GitHub</a>
+        </div>
+
+        <div>
+          <h3>Guess The Trick</h3>
+          <p>Skateboarding themed hangman game</p>
+          <a href="https://scottgall.github.io/Guess-The-Trick/">Link</a>
+          <a href="https://github.com/scottgall/Guess-The-Trick/">GitHub</a>
+        </div>
+
+        <div>
+          <h3>Star Wars RPG</h3>
+          <p>Single-player Javascirpt RPG</p>
+          <a href="https://looking-back.herokuapp.com/">Link</a>
+          <a href="url">GitHub</a>
+        </div>
+      </div>
     </div>
 
-    <div class='work'>
-      <div>
-        <h3>LookingBack</h3>
-        <p>MERN stack social media app to memorialize lost loved ones</p>
-        <a href="https://looking-back.herokuapp.com/">Link</a>
-        <a href="https://github.com/scottgall/Looking-Back/">GitHub</a>
-      </div>
-
-      <div>
-        <h3>JobSpace</h3>
-        <p>MySQL job application tracker</p>
-        <a href="https://thejobspace.herokuapp.com/">Link</a>
-        <a href="https://github.com/scottgall/Job-Space/">GitHub</a>
-      </div>
-
-      <div>
-        <h3>Fridge Forager</h3>
-        <p>Yummly API recipe search engine</p>
-        <a href="https://scottgall.github.io/Fridge-Forager/">Link</a>
-        <a href="https://github.com/scottgall/Fridge-Forager/">GitHub</a>
-      </div>
-
-      <div>
-        <h3>News Scraper</h3>
-        <p>MongoDB web scraper</p>
-        <a href="https://mongolianmongoscraper.herokuapp.com/">Link</a>
-        <a href="https://github.com/scottgall/Mongolian-News-Scraper/">GitHub</a>
-      </div>
-
-      <div>
-        <h3>Skateboard Trivia</h3>
-        <p>Timed multiple-choice trivia quiz</p>
-        <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/">Link</a>
-        <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/">GitHub</a>
-      </div>
-
-      <div>
-        <h3>Guess The Trick</h3>
-        <p>Skateboarding themed hangman game</p>
-        <a href="https://scottgall.github.io/Guess-The-Trick/">Link</a>
-        <a href="https://github.com/scottgall/Guess-The-Trick/">GitHub</a>
-        <a href="url">Demo</a>
-      </div>
-
-      <div>
-        <h3>Star Wars RPG</h3>
-        <p>Single-player Javascirpt RPG</p>
-        <a href="https://looking-back.herokuapp.com/">Link</a>
-        <a href="url">GitHub</a>
-      </div>
+    <div class='bottom-bar'>
+      bottom bar
+    </div>
 
     </div>
   </div>  
