--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class='container'>
     <div class='top-bar'>
-      top bar
+      links
     </div>
     <div class='main-content'>
       <div class='about'>
