--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
       <div class='work'>
         <div>
           <h3>LookingBack</h3>
+          <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1TUvJS8paewJROI6mBxWwdOgccXtOQOxF'/>
           <p>MERN stack social media app to memorialize lost loved ones</p>
-          <a href="https://looking-back.herokuapp.com/">Link</a>
-          <a href="https://github.com/scottgall/Looking-Back/">GitHub</a>
+          <div class='project-links'>
+            <a href="https://looking-back.herokuapp.com/">Link</a>
+            <a href="https://github.com/scottgall/Looking-Back/">GitHub</a>
+          </div>
         </div>
 
         <div>
