--- a/index.html
+++ b/index.html
@@ -33,20 +33,27 @@
 
         <div>
           <h3>JobSpace</h3>
+          <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=18gLXUazo-AyWkYpxgNfDJiwo-TEpnTZ9'/>
           <p>MySQL job application tracker</p>
-          <a href="https://thejobspace.herokuapp.com/">Link</a>
-          <a href="https://github.com/scottgall/Job-Space/">GitHub</a>
+          <div class='project-links'>
+            <a href="https://thejobspace.herokuapp.com/">Link</a>
+            <a href="https://github.com/scottgall/Job-Space/">GitHub</a>
+          </div>
         </div>
 
         <div>
           <h3>Fridge Forager</h3>
+          <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1051w2hCYrGMSjUw7Aig309jur_VuoQlA'/>
           <p>Yummly API recipe search engine</p>
-          <a href="https://scottgall.github.io/Fridge-Forager/">Link</a>
-          <a href="https://github.com/scottgall/Fridge-Forager/">GitHub</a>
+          <div class='project-links'>
+            <a href="https://scottgall.github.io/Fridge-Forager/">Link</a>
+            <a href="https://github.com/scottgall/Fridge-Forager/">GitHub</a>
+          </div>
         </div>
 
         <div>
           <h3>News Scraper</h3>
+          <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1XpLv8fBMafxLXOhQXmIHwrvRCLqPozJz'/>
           <p>MongoDB web scraper</p>
           <a href="https://mongolianmongoscraper.herokuapp.com/">Link</a>
           <a href="https://github.com/scottgall/Mongolian-News-Scraper/">GitHub</a>
@@ -54,6 +61,7 @@
 
         <div>
           <h3>Skateboard Trivia</h3>
+          <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1YCBBB4ifw4kc9Z4GYDegiJCzqbz4XIq6'/>
           <p>Timed multiple-choice trivia quiz</p>
           <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/">Link</a>
           <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/">GitHub</a>
@@ -61,6 +69,7 @@
 
         <div>
           <h3>Guess The Trick</h3>
+          <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1PnhLkkpG--BnOi98omLEuxEDzU7g3rUn'/>
           <p>Skateboarding themed hangman game</p>
           <a href="https://scottgall.github.io/Guess-The-Trick/">Link</a>
           <a href="https://github.com/scottgall/Guess-The-Trick/">GitHub</a>
@@ -68,8 +77,9 @@
 
         <div>
           <h3>Star Wars RPG</h3>
+          <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1jtJR14TWt4Mj2l8xlXLEZmIhwbJbg9xR'/>
           <p>Single-player Javascirpt RPG</p>
-          <a href="https://looking-back.herokuapp.com/">Link</a>
+          <a href="https://scottgall.github.io/Star-Wars-RPG/">Link</a>
           <a href="url">GitHub</a>
         </div>
       </div>
