name wrapped around pic

--- a/index.html
+++ b/index.html
@@ -14,71 +14,84 @@
     </div>
     <div class='main-content'>
       <div class='about'>
-        <h1>Scott Gall</h1>
-        <img src='https://drive.google.com/uc?export=view&id=1FrhMYIAIoQ0Rxc0IJvGspVU4qJjenOFr'/>
+        <div class='main-pic-section'>
+          <!-- <h1 class='name'> -->
+            <span class="char1">S</span>
+            <span class="char2">c</span>
+            <span class="char3">o</span>
+            <span class="char4">t</span>
+            <span class="char5">t</span>
+            <span class="char6"> </span>
+            <span class="char7">G</span>
+            <span class="char8">a</span>
+            <span class="char9">l</span>
+            <span class="char10">l</span>
+          <!-- </h1> -->
+          <img class='headshot' src='https://drive.google.com/uc?export=view&id=1FrhMYIAIoQ0Rxc0IJvGspVU4qJjenOFr'/>
+        </div>
         <h2>web developer</h2>
         <h2>I create polished interfaces and powerful tools that make for smooth, accessable user experiences.</h2>
       </div>
 
       <div class='work'>
-        <div>
+        <div class='project-container'>
           <h3>LookingBack</h3>
           <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1TUvJS8paewJROI6mBxWwdOgccXtOQOxF'/>
-          <p>MERN stack social media app to memorialize lost loved ones</p>
+          <p class='description'>MERN stack social media app</p>
           <div class='project-links'>
             <a href="https://looking-back.herokuapp.com/">Link</a>
             <a href="https://github.com/scottgall/Looking-Back/">GitHub</a>
           </div>
         </div>
 
-        <div>
+        <div class='project-container'>
           <h3>JobSpace</h3>
           <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=18gLXUazo-AyWkYpxgNfDJiwo-TEpnTZ9'/>
-          <p>MySQL job application tracker</p>
+          <p class='description'>MySQL job application tracker</p>
           <div class='project-links'>
             <a href="https://thejobspace.herokuapp.com/">Link</a>
             <a href="https://github.com/scottgall/Job-Space/">GitHub</a>
           </div>
         </div>
 
-        <div>
+        <div class='project-container'>
           <h3>Fridge Forager</h3>
           <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1051w2hCYrGMSjUw7Aig309jur_VuoQlA'/>
-          <p>Yummly API recipe search engine</p>
+          <p class='description'>Yummly API recipe search engine</p>
           <div class='project-links'>
             <a href="https://scottgall.github.io/Fridge-Forager/">Link</a>
             <a href="https://github.com/scottgall/Fridge-Forager/">GitHub</a>
           </div>
         </div>
 
-        <div>
+        <div class='project-container'>
           <h3>News Scraper</h3>
           <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1XpLv8fBMafxLXOhQXmIHwrvRCLqPozJz'/>
-          <p>MongoDB web scraper</p>
+          <p class='description'>MongoDB web scraper</p>
           <a href="https://mongolianmongoscraper.herokuapp.com/">Link</a>
           <a href="https://github.com/scottgall/Mongolian-News-Scraper/">GitHub</a>
         </div>
 
-        <div>
+        <div class='project-container'>
           <h3>Skateboard Trivia</h3>
           <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1YCBBB4ifw4kc9Z4GYDegiJCzqbz4XIq6'/>
-          <p>Timed multiple-choice trivia quiz</p>
+          <p class='description'>Timed multiple-choice trivia quiz</p>
           <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/">Link</a>
           <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/">GitHub</a>
         </div>
 
-        <div>
+        <div class='project-container'>
           <h3>Guess The Trick</h3>
           <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1PnhLkkpG--BnOi98omLEuxEDzU7g3rUn'/>
-          <p>Skateboarding themed hangman game</p>
+          <p class='description'>Skateboarding themed hangman game</p>
           <a href="https://scottgall.github.io/Guess-The-Trick/">Link</a>
           <a href="https://github.com/scottgall/Guess-The-Trick/">GitHub</a>
         </div>
 
-        <div>
+        <div class='project-container'>
           <h3>Star Wars RPG</h3>
           <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1jtJR14TWt4Mj2l8xlXLEZmIhwbJbg9xR'/>
-          <p>Single-player Javascirpt RPG</p>
+          <p class='description'>Single-player Javascirpt RPG</p>
           <a href="https://scottgall.github.io/Star-Wars-RPG/">Link</a>
           <a href="url">GitHub</a>
         </div>
