--- a/index.html
+++ b/index.html
@@ -21,11 +21,22 @@
             <span class="char3">o</span>
             <span class="char4">t</span>
             <span class="char5">t</span>
-            <span class="char6"> </span>
-            <span class="char7">G</span>
-            <span class="char8">a</span>
+            <span class="char6">G</span>
+            <span class="char7">a</span>
+            <span class="char8">l</span>
             <span class="char9">l</span>
-            <span class="char10">l</span>
+            <span class="char10">W</span>
+            <span class="char11">e</span>
+            <span class="char12">b</span>
+            <span class="char13">D</span>
+            <span class="char14">e</span>
+            <span class="char15">v</span>
+            <span class="char16">e</span>
+            <span class="char17">l</span>
+            <span class="char18">o</span>
+            <span class="char19">p</span>
+            <span class="char20">e</span>
+            <span class="char21">r</span>
           <!-- </h1> -->
           <img class='headshot' src='https://drive.google.com/uc?export=view&id=1FrhMYIAIoQ0Rxc0IJvGspVU4qJjenOFr'/>
         </div>
