--- a/index.html
+++ b/index.html
@@ -16,37 +16,37 @@
       <div class='about'>
         <div class='main-pic-section'>
           <!-- <h1 class='name'> -->
-            <span class="char1">S</span>
-            <span class="char2">c</span>
-            <span class="char3">o</span>
-            <span class="char4">t</span>
-            <span class="char5">t</span>
-            <span class="char6">G</span>
-            <span class="char7">a</span>
-            <span class="char8">l</span>
-            <span class="char9">l</span>
+            <span class="char1 name">S</span>
+            <span class="char2 name">C</span>
+            <span class="char3 name">O</span>
+            <span class="char4 name">T</span>
+            <span class="char5 name">T</span>
+            <span class="char6 name">G</span>
+            <span class="char7 name">A</span>
+            <span class="char8 name">L</span>
+            <span class="char9 name">L</span>
             <span class="char10">W</span>
-            <span class="char11">e</span>
-            <span class="char12">b</span>
+            <span class="char11">E</span>
+            <span class="char12">B</span>
             <span class="char13">D</span>
-            <span class="char14">e</span>
-            <span class="char15">v</span>
-            <span class="char16">e</span>
-            <span class="char17">l</span>
-            <span class="char18">o</span>
-            <span class="char19">p</span>
-            <span class="char20">e</span>
-            <span class="char21">r</span>
+            <span class="char14">E</span>
+            <span class="char15">V</span>
+            <span class="char16">E</span>
+            <span class="char17">L</span>
+            <span class="char18">O</span>
+            <span class="char19">P</span>
+            <span class="char20">E</span>
+            <span class="char21">R</span>
           <!-- </h1> -->
           <img class='headshot' src='https://drive.google.com/uc?export=view&id=1FrhMYIAIoQ0Rxc0IJvGspVU4qJjenOFr'/>
         </div>
-        <h2>web developer</h2>
-        <h2>I create polished interfaces and powerful tools that make for smooth, accessable user experiences.</h2>
+        <!-- <h2>web developer</h2> -->
+        <p>I create polished interfaces and powerful tools that make for smooth, accessable user experiences.</p>
       </div>
 
       <div class='work'>
         <div class='project-container'>
-          <h3>LookingBack</h3>
+          <p class='project-title'>LookingBack</p>
           <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1TUvJS8paewJROI6mBxWwdOgccXtOQOxF'/>
           <p class='description'>MERN stack social media app</p>
           <div class='project-links'>
@@ -56,7 +56,7 @@
         </div>
 
         <div class='project-container'>
-          <h3>JobSpace</h3>
+          <p class='project-title'>JobSpace</p>
           <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=18gLXUazo-AyWkYpxgNfDJiwo-TEpnTZ9'/>
           <p class='description'>MySQL job application tracker</p>
           <div class='project-links'>
@@ -66,7 +66,7 @@
         </div>
 
         <div class='project-container'>
-          <h3>Fridge Forager</h3>
+          <p class='project-title'>Fridge Forager</p>
           <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1051w2hCYrGMSjUw7Aig309jur_VuoQlA'/>
           <p class='description'>Yummly API recipe search engine</p>
           <div class='project-links'>
@@ -76,7 +76,7 @@
         </div>
 
         <div class='project-container'>
-          <h3>News Scraper</h3>
+          <p class='project-title'>News Scraper</p>
           <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1XpLv8fBMafxLXOhQXmIHwrvRCLqPozJz'/>
           <p class='description'>MongoDB web scraper</p>
           <a href="https://mongolianmongoscraper.herokuapp.com/">Link</a>
@@ -84,7 +84,7 @@
         </div>
 
         <div class='project-container'>
-          <h3>Skateboard Trivia</h3>
+          <p class='project-title'>Skateboard Trivia</p>
           <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1YCBBB4ifw4kc9Z4GYDegiJCzqbz4XIq6'/>
           <p class='description'>Timed multiple-choice trivia quiz</p>
           <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/">Link</a>
@@ -92,7 +92,7 @@
         </div>
 
         <div class='project-container'>
-          <h3>Guess The Trick</h3>
+          <p class='project-title'>Guess The Trick</p>
           <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1PnhLkkpG--BnOi98omLEuxEDzU7g3rUn'/>
           <p class='description'>Skateboarding themed hangman game</p>
           <a href="https://scottgall.github.io/Guess-The-Trick/">Link</a>
@@ -100,7 +100,7 @@
         </div>
 
         <div class='project-container'>
-          <h3>Star Wars RPG</h3>
+          <p class='project-title'>Star Wars RPG</p>
           <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1jtJR14TWt4Mj2l8xlXLEZmIhwbJbg9xR'/>
           <p class='description'>Single-player Javascirpt RPG</p>
           <a href="https://scottgall.github.io/Star-Wars-RPG/">Link</a>
