project thumbnails done

--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
           <!-- </h1> -->
           <img class='headshot' src='https://drive.google.com/uc?export=view&id=1FrhMYIAIoQ0Rxc0IJvGspVU4qJjenOFr'/>
         </div>
+
+        <img class='icon' src='        https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png'/>
+        <img class='icon' src='https://drive.google.com/uc?export=view&id=1nuAiIrP7CCKg3Mpfj3M7R_STXU9yyUQk'/>
         <!-- <h2>web developer</h2> -->
-        <p>I create polished interfaces and powerful tools that make for smooth, accessable user experiences.</p>
+        <p class='personal-statement'>I create polished interfaces and powerful tools that make for smooth, accessable user experiences.</p>
       </div>
 
       <div class='work'>
@@ -104,7 +107,15 @@
           <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1jtJR14TWt4Mj2l8xlXLEZmIhwbJbg9xR'/>
           <p class='description'>Single-player Javascirpt RPG</p>
           <a href="https://scottgall.github.io/Star-Wars-RPG/">Link</a>
-          <a href="url">GitHub</a>
+          <a href="https://github.com/scottgall/Star-Wars-RPG">GitHub</a>
+        </div>
+
+        <div class='project-container'>
+          <p class='project-title'>Burgers</p>
+          <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1XUk02VexcDy4m4RwHOT6qIAXx6d6nYBO'/>
+          <p class='description'>Node.js CRUD app using a Sequelize ORM</p>
+          <a href="https://sequelize-orm-demo.herokuapp.com/">Link</a>
+          <a href="https://github.com/scottgall/Sequelize-ORM-Demo">GitHub</a>
         </div>
       </div>
     </div>
