github & linkedin icon links

--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
           <!-- </h1> -->
           <img class='headshot' src='https://drive.google.com/uc?export=view&id=1FrhMYIAIoQ0Rxc0IJvGspVU4qJjenOFr'/>
         </div>
-
-        <img class='icon' src='        https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png'/>
-        <img class='icon' src='https://drive.google.com/uc?export=view&id=1nuAiIrP7CCKg3Mpfj3M7R_STXU9yyUQk'/>
+        <div class='icons'>
+          <a href="https://github.com/scottgall"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+          <a href="https://www.linkedin.com/in/scottarthurgall/"><img class="icon" src="assets/images/linkedin.svg" alt="Github icon"></a>
+        </div>
+        <p>scottarthurgall@gmail.com</p>
+        <p>Chicago, IL</p>
         <!-- <h2>web developer</h2> -->
         <p class='personal-statement'>I create polished interfaces and powerful tools that make for smooth, accessable user experiences.</p>
       </div>
