--- a/index.html
+++ b/index.html
@@ -9,13 +9,8 @@
 </head>
 <body>
   <div class='container'>
-    <div class='top-bar'>
-      links
-    </div>
-    <div class='main-content'>
       <div class='about'>
         <div class='main-pic-section'>
-          <!-- <h1 class='name'> -->
             <span class="char1 name">S</span>
             <span class="char2 name">C</span>
             <span class="char3 name">O</span>
@@ -37,8 +32,7 @@
             <span class="char19">P</span>
             <span class="char20">E</span>
             <span class="char21">R</span>
-          <!-- </h1> -->
-          <img class='headshot' src='https://drive.google.com/uc?export=view&id=1FrhMYIAIoQ0Rxc0IJvGspVU4qJjenOFr'/>
+            <img class='headshot' src='assets/images/headshot.jpg'/>
         </div>
         <div class='icons'>
           <a href="https://github.com/scottgall"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
@@ -53,7 +47,7 @@
       <div class='work'>
         <div class='project-container'>
           <p class='project-title'>LookingBack</p>
-          <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1TUvJS8paewJROI6mBxWwdOgccXtOQOxF'/>
+          <img class='thumbnail' src='assets/images/lookingback.jpg'/>
           <p class='description'>MERN stack social media app</p>
           <div class='project-links'>
             <a href="https://looking-back.herokuapp.com/">Link</a>
@@ -63,7 +57,7 @@
 
         <div class='project-container'>
           <p class='project-title'>JobSpace</p>
-          <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=18gLXUazo-AyWkYpxgNfDJiwo-TEpnTZ9'/>
+          <img class='thumbnail' src='assets/images/jobspace.png'/>
           <p class='description'>MySQL job application tracker</p>
           <div class='project-links'>
             <a href="https://thejobspace.herokuapp.com/">Link</a>
@@ -73,7 +67,7 @@
 
         <div class='project-container'>
           <p class='project-title'>Fridge Forager</p>
-          <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1051w2hCYrGMSjUw7Aig309jur_VuoQlA'/>
+          <img class='thumbnail' src='assets/images/fridgeforager.jpg'/>
           <p class='description'>Yummly API recipe search engine</p>
           <div class='project-links'>
             <a href="https://scottgall.github.io/Fridge-Forager/">Link</a>
@@ -83,7 +77,7 @@
 
         <div class='project-container'>
           <p class='project-title'>News Scraper</p>
-          <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1XpLv8fBMafxLXOhQXmIHwrvRCLqPozJz'/>
+          <img class='thumbnail' src='assets/images/newsscraper.jpg'/>
           <p class='description'>MongoDB web scraper</p>
           <a href="https://mongolianmongoscraper.herokuapp.com/">Link</a>
           <a href="https://github.com/scottgall/Mongolian-News-Scraper/">GitHub</a>
@@ -91,7 +85,7 @@
 
         <div class='project-container'>
           <p class='project-title'>Skateboard Trivia</p>
-          <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1YCBBB4ifw4kc9Z4GYDegiJCzqbz4XIq6'/>
+          <img class='thumbnail' src='assets/images/skateboardtrivia.jpg'/>
           <p class='description'>Timed multiple-choice trivia quiz</p>
           <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/">Link</a>
           <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/">GitHub</a>
@@ -99,7 +93,7 @@
 
         <div class='project-container'>
           <p class='project-title'>Guess The Trick</p>
-          <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1PnhLkkpG--BnOi98omLEuxEDzU7g3rUn'/>
+          <img class='thumbnail' src='assets/images/guessthetrick.jpg'/>
           <p class='description'>Skateboarding themed hangman game</p>
           <a href="https://scottgall.github.io/Guess-The-Trick/">Link</a>
           <a href="https://github.com/scottgall/Guess-The-Trick/">GitHub</a>
@@ -107,7 +101,7 @@
 
         <div class='project-container'>
           <p class='project-title'>Star Wars RPG</p>
-          <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1jtJR14TWt4Mj2l8xlXLEZmIhwbJbg9xR'/>
+          <img class='thumbnail' src='assets/images/starwars.jpg'/>
           <p class='description'>Single-player Javascirpt RPG</p>
           <a href="https://scottgall.github.io/Star-Wars-RPG/">Link</a>
           <a href="https://github.com/scottgall/Star-Wars-RPG">GitHub</a>
@@ -115,19 +109,14 @@
 
         <div class='project-container'>
           <p class='project-title'>Burgers</p>
-          <img class='thumbnail' src='https://drive.google.com/uc?export=view&id=1XUk02VexcDy4m4RwHOT6qIAXx6d6nYBO'/>
-          <p class='description'>Node.js CRUD app using a Sequelize ORM</p>
+          <img class='thumbnail' src='assets/images/burgers.jpg'/>
+          <p class='description'>CRUD app as a Sequelize ORM demo</p>
           <a href="https://sequelize-orm-demo.herokuapp.com/">Link</a>
           <a href="https://github.com/scottgall/Sequelize-ORM-Demo">GitHub</a>
         </div>
       </div>
     </div>
 
-    <div class='bottom-bar'>
-      bottom bar
-    </div>
-
-    </div>
   </div>  
 </body>
 </html>
