added link icon

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
           <p class='description'>MERN stack social media app</p>
           <div class='project-links'>
             <a href="https://looking-back.herokuapp.com/">Link</a>
-            <a href="https://github.com/scottgall/Looking-Back/">GitHub</a>
+            <a href="https://github.com/scottgall/Looking-Back/">GitHub</a>          <a href="https://github.com/scottgall"><img class="icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+
           </div>
         </div>
 
