--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <span class="char19">P</span>
             <span class="char20">E</span>
             <span class="char21">R</span>
-            <img class='headshot' src='assets/images/headshot.jpg'/>
+            <img class='headshot rounded' src='assets/images/headshot.jpg'/>
         </div>
         <div class='icons'>
-          <a href="https://github.com/scottgall"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+          <a class='clickable' href="https://github.com/scottgall"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
           <a href="https://www.linkedin.com/in/scottarthurgall/"><img class="icon" src="assets/images/linkedin.svg" alt="Github icon"></a>
         </div>
         <p>scottarthurgall@gmail.com</p>
@@ -47,73 +47,100 @@
       <div class='work'>
         <div class='project-container'>
           <p class='project-title'>LookingBack</p>
-          <img class='thumbnail' src='assets/images/lookingback.jpg'/>
+          <img class='thumbnail rounded' src='assets/images/lookingback.jpg'/>
           <p class='description'>MERN stack social media app</p>
           <div class='project-links'>
-            <a href="https://looking-back.herokuapp.com/">Link</a>
-            <a href="https://github.com/scottgall/Looking-Back/">GitHub</a>          <a href="https://github.com/scottgall"><img class="icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+              <a href="https://looking-back.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+              <a href="https://github.com/scottgall/Looking-Back/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+              <!-- <a href="https://github.com/scottgall/Looking-Back/">GitHub</a>   -->
+            <!-- <a href="https://looking-back.herokuapp.com/">Link</a> -->
 
           </div>
         </div>
 
         <div class='project-container'>
           <p class='project-title'>JobSpace</p>
-          <img class='thumbnail' src='assets/images/jobspace.png'/>
+          <img class='thumbnail rounded' src='assets/images/jobspace.png'/>
           <p class='description'>MySQL job application tracker</p>
           <div class='project-links'>
+            <a href="https://looking-back.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Looking-Back/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+<!--             
             <a href="https://thejobspace.herokuapp.com/">Link</a>
-            <a href="https://github.com/scottgall/Job-Space/">GitHub</a>
+            <a href="https://github.com/scottgall/Job-Space/">GitHub</a> -->
           </div>
         </div>
 
         <div class='project-container'>
           <p class='project-title'>Fridge Forager</p>
-          <img class='thumbnail' src='assets/images/fridgeforager.jpg'/>
+          <img class='thumbnail rounded' src='assets/images/fridgeforager.jpg'/>
           <p class='description'>Yummly API recipe search engine</p>
           <div class='project-links'>
-            <a href="https://scottgall.github.io/Fridge-Forager/">Link</a>
-            <a href="https://github.com/scottgall/Fridge-Forager/">GitHub</a>
+              <a href="https://looking-back.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+              <a href="https://github.com/scottgall/Looking-Back/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+            <!-- <a href="https://scottgall.github.io/Fridge-Forager/">Link</a>
+            <a href="https://github.com/scottgall/Fridge-Forager/">GitHub</a> -->
           </div>
         </div>
 
         <div class='project-container'>
           <p class='project-title'>News Scraper</p>
-          <img class='thumbnail' src='assets/images/newsscraper.jpg'/>
+          <img class='thumbnail rounded' src='assets/images/newsscraper.jpg'/>
           <p class='description'>MongoDB web scraper</p>
-          <a href="https://mongolianmongoscraper.herokuapp.com/">Link</a>
-          <a href="https://github.com/scottgall/Mongolian-News-Scraper/">GitHub</a>
+          <div class='project-links'>
+            <a href="https://looking-back.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Looking-Back/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+          </div>
+          <!-- <a href="https://mongolianmongoscraper.herokuapp.com/">Link</a>
+          <a href="https://github.com/scottgall/Mongolian-News-Scraper/">GitHub</a> -->
         </div>
 
         <div class='project-container'>
           <p class='project-title'>Skateboard Trivia</p>
-          <img class='thumbnail' src='assets/images/skateboardtrivia.jpg'/>
+          <img class='thumbnail rounded' src='assets/images/skateboardtrivia.jpg'/>
           <p class='description'>Timed multiple-choice trivia quiz</p>
-          <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/">Link</a>
-          <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/">GitHub</a>
+          <div class='project-links'>
+            <a href="https://looking-back.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Looking-Back/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+          </div>
+          <!-- <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/">Link</a>
+          <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/">GitHub</a> -->
         </div>
 
         <div class='project-container'>
           <p class='project-title'>Guess The Trick</p>
-          <img class='thumbnail' src='assets/images/guessthetrick.jpg'/>
+          <img class='thumbnail rounded' src='assets/images/guessthetrick.jpg'/>
           <p class='description'>Skateboarding themed hangman game</p>
-          <a href="https://scottgall.github.io/Guess-The-Trick/">Link</a>
-          <a href="https://github.com/scottgall/Guess-The-Trick/">GitHub</a>
+          <div class='project-links'>
+            <a href="https://looking-back.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Looking-Back/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+          </div>
+          <!-- <a href="https://scottgall.github.io/Guess-The-Trick/">Link</a>
+          <a href="https://github.com/scottgall/Guess-The-Trick/">GitHub</a> -->
         </div>
 
         <div class='project-container'>
           <p class='project-title'>Star Wars RPG</p>
-          <img class='thumbnail' src='assets/images/starwars.jpg'/>
+          <img class='thumbnail rounded' src='assets/images/starwars.jpg'/>
           <p class='description'>Single-player Javascirpt RPG</p>
-          <a href="https://scottgall.github.io/Star-Wars-RPG/">Link</a>
-          <a href="https://github.com/scottgall/Star-Wars-RPG">GitHub</a>
+          <div class='project-links'>
+            <a href="https://looking-back.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Looking-Back/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+          </div>
+          <!-- <a href="https://scottgall.github.io/Star-Wars-RPG/">Link</a>
+          <a href="https://github.com/scottgall/Star-Wars-RPG">GitHub</a> -->
         </div>
 
         <div class='project-container'>
           <p class='project-title'>Burgers</p>
-          <img class='thumbnail' src='assets/images/burgers.jpg'/>
+          <img class='thumbnail rounded' src='assets/images/burgers.jpg'/>
           <p class='description'>CRUD app as a Sequelize ORM demo</p>
-          <a href="https://sequelize-orm-demo.herokuapp.com/">Link</a>
-          <a href="https://github.com/scottgall/Sequelize-ORM-Demo">GitHub</a>
+          <div class='project-links'>
+            <a href="https://looking-back.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Looking-Back/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+          </div>
+          <!-- <a href="https://sequelize-orm-demo.herokuapp.com/">Link</a>
+          <a href="https://github.com/scottgall/Sequelize-ORM-Demo">GitHub</a> -->
         </div>
       </div>
     </div>
