links actually working

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
           <img class='thumbnail rounded' src='assets/images/jobspace.png'/>
           <p class='description'>MySQL job application tracker</p>
           <div class='project-links'>
-            <a href="https://looking-back.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
-            <a href="https://github.com/scottgall/Looking-Back/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+            <a href="https://thejobspace.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Job-Space/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
 <!--             
             <a href="https://thejobspace.herokuapp.com/">Link</a>
             <a href="https://github.com/scottgall/Job-Space/">GitHub</a> -->
@@ -76,8 +76,8 @@
           <img class='thumbnail rounded' src='assets/images/fridgeforager.jpg'/>
           <p class='description'>Yummly API recipe search engine</p>
           <div class='project-links'>
-              <a href="https://looking-back.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
-              <a href="https://github.com/scottgall/Looking-Back/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+              <a href="https://scottgall.github.io/Fridge-Forager/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+              <a href="https://github.com/scottgall/Fridge-Forager/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
             <!-- <a href="https://scottgall.github.io/Fridge-Forager/">Link</a>
             <a href="https://github.com/scottgall/Fridge-Forager/">GitHub</a> -->
           </div>
@@ -88,8 +88,8 @@
           <img class='thumbnail rounded' src='assets/images/newsscraper.jpg'/>
           <p class='description'>MongoDB web scraper</p>
           <div class='project-links'>
-            <a href="https://looking-back.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
-            <a href="https://github.com/scottgall/Looking-Back/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+            <a href="https://mongolianmongoscraper.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Mongolian-News-Scraper/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
           </div>
           <!-- <a href="https://mongolianmongoscraper.herokuapp.com/">Link</a>
           <a href="https://github.com/scottgall/Mongolian-News-Scraper/">GitHub</a> -->
@@ -100,8 +100,8 @@
           <img class='thumbnail rounded' src='assets/images/skateboardtrivia.jpg'/>
           <p class='description'>Timed multiple-choice trivia quiz</p>
           <div class='project-links'>
-            <a href="https://looking-back.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
-            <a href="https://github.com/scottgall/Looking-Back/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+            <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
           </div>
           <!-- <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/">Link</a>
           <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/">GitHub</a> -->
@@ -112,8 +112,8 @@
           <img class='thumbnail rounded' src='assets/images/guessthetrick.jpg'/>
           <p class='description'>Skateboarding themed hangman game</p>
           <div class='project-links'>
-            <a href="https://looking-back.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
-            <a href="https://github.com/scottgall/Looking-Back/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+            <a href="https://scottgall.github.io/Guess-The-Trick/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Guess-The-Trick/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
           </div>
           <!-- <a href="https://scottgall.github.io/Guess-The-Trick/">Link</a>
           <a href="https://github.com/scottgall/Guess-The-Trick/">GitHub</a> -->
@@ -124,8 +124,8 @@
           <img class='thumbnail rounded' src='assets/images/starwars.jpg'/>
           <p class='description'>Single-player Javascirpt RPG</p>
           <div class='project-links'>
-            <a href="https://looking-back.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
-            <a href="https://github.com/scottgall/Looking-Back/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+            <a href="https://scottgall.github.io/Star-Wars-RPG/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Star-Wars-RPG"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
           </div>
           <!-- <a href="https://scottgall.github.io/Star-Wars-RPG/">Link</a>
           <a href="https://github.com/scottgall/Star-Wars-RPG">GitHub</a> -->
@@ -136,8 +136,8 @@
           <img class='thumbnail rounded' src='assets/images/burgers.jpg'/>
           <p class='description'>CRUD app as a Sequelize ORM demo</p>
           <div class='project-links'>
-            <a href="https://looking-back.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
-            <a href="https://github.com/scottgall/Looking-Back/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+            <a href="https://sequelize-orm-demo.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Sequelize-ORM-Demo"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
           </div>
           <!-- <a href="https://sequelize-orm-demo.herokuapp.com/">Link</a>
           <a href="https://github.com/scottgall/Sequelize-ORM-Demo">GitHub</a> -->
