links show on hover

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <img class='headshot rounded' src='assets/images/headshot.jpg'/>
         </div>
         <div class='icons'>
-          <a class='clickable' href="https://github.com/scottgall"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
-          <a href="https://www.linkedin.com/in/scottarthurgall/"><img class="icon" src="assets/images/linkedin.svg" alt="Github icon"></a>
+          <a class='clickable' href="https://github.com/scottgall" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+          <a href="https://www.linkedin.com/in/scottarthurgall/" target="_blank"><img class="icon" src="assets/images/linkedin.svg" alt="Github icon"></a>
         </div>
         <p>scottarthurgall@gmail.com</p>
         <p>Chicago, IL</p>
@@ -47,11 +47,11 @@
       <div class='work'>
         <div class='project-container'>
           <p class='project-title'>LookingBack</p>
-          <img class='thumbnail rounded' src='assets/images/lookingback.jpg'/>
+          <a href="https://looking-back.herokuapp.com/" target="_blank"><img class='thumbnail rounded' src='assets/images/lookingback.jpg'/></a>
           <p class='description'>MERN stack social media app</p>
           <div class='project-links'>
-              <a href="https://looking-back.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
-              <a href="https://github.com/scottgall/Looking-Back/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+              <a href="https://looking-back.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
+              <a href="https://github.com/scottgall/Looking-Back/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
               <!-- <a href="https://github.com/scottgall/Looking-Back/">GitHub</a>   -->
             <!-- <a href="https://looking-back.herokuapp.com/">Link</a> -->
 
@@ -60,11 +60,11 @@
 
         <div class='project-container'>
           <p class='project-title'>JobSpace</p>
-          <img class='thumbnail rounded' src='assets/images/jobspace.png'/>
+          <a href="https://thejobspace.herokuapp.com/" target="_blank"><img class='thumbnail rounded' src='assets/images/jobspace.png'/></a>
           <p class='description'>MySQL job application tracker</p>
           <div class='project-links'>
-            <a href="https://thejobspace.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
-            <a href="https://github.com/scottgall/Job-Space/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+            <a href="https://thejobspace.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Job-Space/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
 <!--             
             <a href="https://thejobspace.herokuapp.com/">Link</a>
             <a href="https://github.com/scottgall/Job-Space/">GitHub</a> -->
@@ -73,11 +73,11 @@
 
         <div class='project-container'>
           <p class='project-title'>Fridge Forager</p>
-          <img class='thumbnail rounded' src='assets/images/fridgeforager.jpg'/>
+          <a href="https://scottgall.github.io/Fridge-Forager/" target="_blank"><img class='thumbnail rounded' src='assets/images/fridgeforager.jpg'/></a>
           <p class='description'>Yummly API recipe search engine</p>
           <div class='project-links'>
-              <a href="https://scottgall.github.io/Fridge-Forager/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
-              <a href="https://github.com/scottgall/Fridge-Forager/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+              <a href="https://scottgall.github.io/Fridge-Forager/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
+              <a href="https://github.com/scottgall/Fridge-Forager/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
             <!-- <a href="https://scottgall.github.io/Fridge-Forager/">Link</a>
             <a href="https://github.com/scottgall/Fridge-Forager/">GitHub</a> -->
           </div>
@@ -85,11 +85,11 @@
 
         <div class='project-container'>
           <p class='project-title'>News Scraper</p>
-          <img class='thumbnail rounded' src='assets/images/newsscraper.jpg'/>
+          <a href="https://mongolianmongoscraper.herokuapp.com/" target="_blank"><img class='thumbnail rounded' src='assets/images/newsscraper.jpg'/></a>
           <p class='description'>MongoDB web scraper</p>
           <div class='project-links'>
-            <a href="https://mongolianmongoscraper.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
-            <a href="https://github.com/scottgall/Mongolian-News-Scraper/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+            <a href="https://mongolianmongoscraper.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Mongolian-News-Scraper/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
           </div>
           <!-- <a href="https://mongolianmongoscraper.herokuapp.com/">Link</a>
           <a href="https://github.com/scottgall/Mongolian-News-Scraper/">GitHub</a> -->
@@ -97,11 +97,11 @@
 
         <div class='project-container'>
           <p class='project-title'>Skateboard Trivia</p>
-          <img class='thumbnail rounded' src='assets/images/skateboardtrivia.jpg'/>
+          <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank"><img class='thumbnail rounded' src='assets/images/skateboardtrivia.jpg'/></a>
           <p class='description'>Timed multiple-choice trivia quiz</p>
           <div class='project-links'>
-            <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
-            <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+            <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank""><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
           </div>
           <!-- <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/">Link</a>
           <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/">GitHub</a> -->
@@ -109,11 +109,11 @@
 
         <div class='project-container'>
           <p class='project-title'>Guess The Trick</p>
-          <img class='thumbnail rounded' src='assets/images/guessthetrick.jpg'/>
+          <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class='thumbnail rounded' src='assets/images/guessthetrick.jpg'/></a>
           <p class='description'>Skateboarding themed hangman game</p>
           <div class='project-links'>
-            <a href="https://scottgall.github.io/Guess-The-Trick/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
-            <a href="https://github.com/scottgall/Guess-The-Trick/"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+            <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Guess-The-Trick/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
           </div>
           <!-- <a href="https://scottgall.github.io/Guess-The-Trick/">Link</a>
           <a href="https://github.com/scottgall/Guess-The-Trick/">GitHub</a> -->
@@ -121,11 +121,11 @@
 
         <div class='project-container'>
           <p class='project-title'>Star Wars RPG</p>
-          <img class='thumbnail rounded' src='assets/images/starwars.jpg'/>
+          <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class='thumbnail rounded' src='assets/images/starwars.jpg'/></a>
           <p class='description'>Single-player Javascirpt RPG</p>
           <div class='project-links'>
-            <a href="https://scottgall.github.io/Star-Wars-RPG/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
-            <a href="https://github.com/scottgall/Star-Wars-RPG"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+            <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon" /></a>
+            <a href="https://github.com/scottgall/Star-Wars-RPG" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon" ></a>
           </div>
           <!-- <a href="https://scottgall.github.io/Star-Wars-RPG/">Link</a>
           <a href="https://github.com/scottgall/Star-Wars-RPG">GitHub</a> -->
@@ -133,11 +133,11 @@
 
         <div class='project-container'>
           <p class='project-title'>Burgers</p>
-          <img class='thumbnail rounded' src='assets/images/burgers.jpg'/>
+          <a href="https://sequelize-orm-demo.herokuapp.com/" target="_blank"><img class='thumbnail rounded' src='assets/images/burgers.jpg'/></a>
           <p class='description'>CRUD app as a Sequelize ORM demo</p>
           <div class='project-links'>
-            <a href="https://sequelize-orm-demo.herokuapp.com/"><img class="icon link-icon" src="assets/images/link.svg" alt="Linkedin icon"></a>
-            <a href="https://github.com/scottgall/Sequelize-ORM-Demo"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
+            <a href="https://sequelize-orm-demo.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
+            <a href="https://github.com/scottgall/Sequelize-ORM-Demo" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
           </div>
           <!-- <a href="https://sequelize-orm-demo.herokuapp.com/">Link</a>
           <a href="https://github.com/scottgall/Sequelize-ORM-Demo">GitHub</a> -->
