--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>scottarthurgall@gmail.com</p>
         <p>Chicago, IL</p>
         <!-- <h2>web developer</h2> -->
-        <p class='personal-statement'>I create polished interfaces and powerful tools that make for smooth, accessable user experiences.</p>
+        <p class='personal-statement'>I create polished interfaces and powerful tools that make for smooth, accessible user experiences.</p>
       </div>
 
       <div class='work'>
