--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class='icons'>
           <a class='clickable' href="https://github.com/scottgall" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
           <a href="https://www.linkedin.com/in/scottarthurgall/" target="_blank"><img class="icon" src="assets/images/linkedin.svg" alt="Github icon"></a>
-          <a href="https://www.linkedin.com/in/scottarthurgall/" target="_blank"><img class="icon" src="assets/images/cv.svg" alt="Github icon"></a>
+          <a href="assets/images/CV_ScottGall.pdf" target="_blank"><img class="icon" src="assets/images/cv.svg" alt="Github icon"></a>
         </div>
         <p>scottarthurgall@gmail.com</p>
         <p>Chicago, IL</p>
