thumbnails responsive sides

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <div class='project-container'>
           <p class='project-title'>JobSpace</p>
-          <a href="https://thejobspace.herokuapp.com/" target="_blank"><img class='thumbnail rounded' src='assets/images/jobspace.png'/></a>
+          <a href="https://thejobspace.herokuapp.com/" target="_blank"><img class='thumbnail rounded small-right' src='assets/images/jobspace.png'/></a>
           <p class='description'>MySQL job application tracker</p>
           <div class='project-links'>
             <a href="https://thejobspace.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
@@ -74,7 +74,7 @@
 
         <div class='project-container'>
           <p class='project-title'>Fridge Forager</p>
-          <a href="https://scottgall.github.io/Fridge-Forager/" target="_blank"><img class='thumbnail rounded' src='assets/images/fridgeforager.jpg'/></a>
+          <a href="https://scottgall.github.io/Fridge-Forager/" target="_blank"><img class='thumbnail rounded s-right' src='assets/images/fridgeforager.jpg'/></a>
           <p class='description'>Yummly API recipe search engine</p>
           <div class='project-links'>
               <a href="https://scottgall.github.io/Fridge-Forager/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
@@ -86,7 +86,7 @@
 
         <div class='project-container'>
           <p class='project-title'>News Scraper</p>
-          <a href="https://mongolianmongoscraper.herokuapp.com/" target="_blank"><img class='thumbnail rounded' src='assets/images/newsscraper.jpg'/></a>
+          <a href="https://mongolianmongoscraper.herokuapp.com/" target="_blank"><img class='thumbnail rounded small-right med-right' src='assets/images/newsscraper.jpg'/></a>
           <p class='description'>MongoDB web scraper</p>
           <div class='project-links'>
             <a href="https://mongolianmongoscraper.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
@@ -98,7 +98,7 @@
 
         <div class='project-container'>
           <p class='project-title'>Skateboard Trivia</p>
-          <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank"><img class='thumbnail rounded' src='assets/images/skateboardtrivia.jpg'/></a>
+          <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank"><img class='thumbnail rounded big-right s-left' src='assets/images/skateboardtrivia.jpg'/></a>
           <p class='description'>Timed multiple-choice trivia quiz</p>
           <div class='project-links'>
             <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank""><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
@@ -110,7 +110,7 @@
 
         <div class='project-container'>
           <p class='project-title'>Guess The Trick</p>
-          <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class='thumbnail rounded' src='assets/images/guessthetrick.jpg'/></a>
+          <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class='thumbnail rounded small-right s-left big-right' src='assets/images/guessthetrick.jpg'/></a>
           <p class='description'>Skateboarding themed hangman game</p>
           <div class='project-links'>
             <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
@@ -122,7 +122,7 @@
 
         <div class='project-container'>
           <p class='project-title'>Star Wars RPG</p>
-          <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class='thumbnail rounded' src='assets/images/starwars.jpg'/></a>
+          <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class='thumbnail rounded big-right s-right med-left' src='assets/images/starwars.jpg'/></a>
           <p class='description'>Single-player Javascirpt RPG</p>
           <div class='project-links'>
             <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon" /></a>
@@ -132,9 +132,9 @@
           <a href="https://github.com/scottgall/Star-Wars-RPG">GitHub</a> -->
         </div>
 
-        <div class='project-container'>
+        <div class='project-container bottom-right'>
           <p class='project-title'>Burgers</p>
-          <a href="https://sequelize-orm-demo.herokuapp.com/" target="_blank"><img class='thumbnail rounded' src='assets/images/burgers.jpg'/></a>
+          <a href="https://sequelize-orm-demo.herokuapp.com/" target="_blank"><img class='thumbnail rounded small-right s-right big-right med-left' src='assets/images/burgers.jpg'/></a>
           <p class='description'>CRUD app as a Sequelize ORM demo</p>
           <div class='project-links'>
             <a href="https://sequelize-orm-demo.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
